Add first/last Month data
